test/v3/fail/type_void07.v3
//@execute 0=1
component type_void07 {
	method main(arg: int) -> int {
		local f = new Array<void>(1);
		if (f(0) == ()) return 1;
		return 2;
	}
}